# atip-data-prep

./: .gitignore  .gitmodules  Cargo.toml  MANIFEST-DEV.txt  MANIFEST-PUBLIC-DEV.txt  MANIFEST-PUBLIC-TEST.txt  MANIFEST-TEST.txt  MANIFEST.txt  README.md  aiuk_ltn_imports.py  authorities.geojson  build_route_info.sh  build_route_snappers.sh  generate_tiles.py  geojson_to_osmium_extracts.py  osm_unit_test_tool.html  split_uk_osm.sh  uk.geojson
all_schemes_geojson_prep/: README.md  index.ts  package.json
bus_frequency/: Cargo.toml  README.md
bus_frequency/src/: gtfs.rs  main.rs
crossings/: .gitignore  Cargo.toml  README.md
crossings/src/: main.rs
dalog/: .gitignore  README.md  convert.ts  package-lock.json  package.json
data/: Local_Authority_Districts_December_2022_UK_BUC_V2_-5963189729337928393.geojson  Local_Authority_Districts_May_2023_UK_BUC_V2_-7390714061867823479.geojson
experimental/: aiuk_ltn_imports.py  generate_tiles.py
fix_boundaries/: .gitignore  README.md  concat_authorities.cjs  index.js  package-lock.json  package.json  reduce_boundary_fidelity.cjs  reduce_boundary_fidelity.js  transport_authorities.geojson
gradient/: Cargo.toml  run.sh
gradient/src/: main.rs
importer/: Cargo.toml
importer/src/: main.rs
layers/: boundaries.py  cars.py  census.py  crossings.py  cycle_paths.py  cycle_paths_tests.py  generate_layers.py  osm.py  osmium_with_ids.cfg  pct.py  rights_of_way.py  road_noise.py  sociodemographic-layers.py  srn.py  traffic.py  utils.py  vehicle_counts.py
layers/input/: Combined_Authorities_December_2022_EN_BUC_1154653457304546671.geojson  Local_Authority_Districts_December_2023_Boundaries_UK_BUC_4615499699084237502.geojson  README.md
ordnance_survey_layers/: Cargo.toml  README.md
ordnance_survey_layers/src/: main.rs  pavement_width.rs  road_width.rs  speed.rs  width.rs
os_geometry/: Cargo.toml  README.md
os_geometry/src/: main.rs
osm_routes/: Cargo.toml  README.md
osm_routes/src/: main.rs
pois/: generate_pois.py
src/: main.rs  route_snapper.rs
stats19/: Cargo.toml  run.sh
stats19/src/: main.rs
