[package]
name = "converter"
version = "0.1.0"
edition = "2021"

[dependencies]
abstio = { git = "https://github.com/a-b-street/abstreet" }
abstutil = { git = "https://github.com/a-b-street/abstreet" }
geom = { git = "https://github.com/a-b-street/abstreet" }
map_model = { git = "https://github.com/a-b-street/abstreet" }
osm2streets = { git = "https://github.com/a-b-street/osm2streets" }
serde = "1.0.123"
serde_json = "1.0.61"
streets_reader = { git = "https://github.com/a-b-street/osm2streets" }
