[package]
name = "bus_frequency"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.33", default-features = false }
csv = "1.3.0"
fs-err = "2.11.0"
geojson = { version = "0.24.1", default-features = false }
serde = { version = "1.0.195", features = ["derive"] }
