[package]
name = "crossings"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
geo = "0.29.3"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
osm-reader = { git = "https://github.com/a-b-street/osm-reader" }
serde = "1.0.216"
serde_json = "1.0.133"
utils = { git = "https://github.com/a-b-street/utils" }
