[package]
name = "importer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
abstutil = { git = "https://github.com/a-b-street/abstreet" }
bincode = "1.3.3"
geom = { git = "https://github.com/a-b-street/abstreet" }
osm2streets = { git = "https://github.com/a-b-street/osm2streets" }
streets_reader = { git = "https://github.com/a-b-street/osm2streets" }
