[package]
name = "os_geometry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
flate2 = "1.1.0"
geozero = { version = "0.14.0", default-features = false, features = ["with-geojson", "with-mvt"] }
indicatif = "0.17.11"
mbtiles = { version = "0.12.0", default-features = false }
pmtiles2 = "0.3.1"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
