[workspace]

[package]
name = "stats19"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
csv = "1.3.0"
fs-err = "2.11.0"
geojson = "0.24.1"
indicatif = "0.17.7"
lonlat_bng = { git = "https://github.com/urschrei/lonlat_bng" }
serde = { version = "1.0.195", features = ["derive"] }
